--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,11 +7,11 @@ setup: &setup
 
 deps-restore: &deps-restore
   restore_cache:
-    key: utz-tspr-cache-{{ checksum "package-lock.json" }}
+    key: tspr-cache-{{ checksum "package-lock.json" }}
 
 deps-cache: &deps-cache
   save_cache:
-    key: utz-tspr-cache-{{ checksum "package-lock.json" }}
+    key: tspr-cache-{{ checksum "package-lock.json" }}
     paths:
       - ./node_modules
 
