--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@uqt/ts-path-replace",
   "version": "0.0.5",
   "description": "CLI Tool to replace TypeScript \"@alias\" paths to relative paths",
+  "type": "commonjs",
   "main": "dist/index.js",
   "bin": {
     "tspr": "bin/tspr"
@@ -11,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/unquenchablethyrst/ts-path-replace"
+    "url": "https://github.com/jonathonadams/ts-path-replace"
   },
   "files": [
     "dist",
@@ -37,37 +38,31 @@
     "example:run": "node example/out/apps/app1/index.js && node example/out/apps/app2/index.js",
     "example:test": "npm run example:build && npm run example:tspr && npm run example:run",
     "lint": "tslint --project tsconfig.json",
-    "test": "jest --coverage",
-    "validate": "npm run lint && npm run test && npm run example:test",
+    "validate": "npm run lint && npm run example:test",
     "prepare": "npm run build && npm run validate",
     "semantic-release": "semantic-release"
   },
   "dependencies": {
-    "glob": "^7.1.4",
     "lodash.merge": "^4.6.2",
-    "minimist": "^1.2.0",
-    "node-watch": "^0.6.3",
-    "replace-in-file": "^4.1.3"
+    "minimist": "^1.2.5",
+    "node-watch": "^0.6.4",
+    "replace-in-file": "^6.1.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.1.0",
-    "@commitlint/config-conventional": "^8.1.0",
-    "@semantic-release/changelog": "^3.0.4",
-    "@semantic-release/git": "^7.0.16",
-    "@types/glob": "^7.1.1",
-    "@types/jest": "^24.0.18",
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-conventional": "^9.1.1",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
     "@types/lodash.merge": "^4.6.6",
     "@types/minimist": "^1.2.0",
-    "@types/node": "^12.7.2",
-    "commitizen": "^4.0.3",
-    "cz-conventional-changelog": "^3.0.2",
-    "husky": "^3.0.5",
-    "jest": "^24.9.0",
-    "rimraf": "^3.0.0",
-    "semantic-release": "^15.13.24",
-    "ts-jest": "^24.0.2",
-    "tslint": "^5.19.0",
-    "typescript": "^3.5.3"
+    "@types/node": "^14.0.23",
+    "commitizen": "^4.1.2",
+    "cz-conventional-changelog": "^3.2.0",
+    "husky": "^4.2.5",
+    "rimraf": "^3.0.2",
+    "semantic-release": "^17.1.1",
+    "tslint": "^6.1.2",
+    "typescript": "^3.9.7"
   },
   "husky": {
     "hooks": {
